// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots SortableHeaderCell with titles 1`] = `
.c0 {
  padding: 20px;
  width: 100%;
}

.c2 {
  background-color: #FFF;
}

.c4 {
  font-size: 16px;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 8px;
  padding-bottom: 8px;
  border-bottom-color: #DBDFE3;
  border-bottom-width: 1px;
  border-bottom-style: solid;
}

.c6 {
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
  width: 100%;
}

.c8 {
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
  width: 100%;
}

.c5 {
  margin-left: -8px;
  margin-right: -8px;
  margin-top: -8px;
  margin-bottom: -8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11 {
  font-size: 14px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12 {
  color: #8D9BA7;
  margin-left: 8px;
  font-family: Material-Design-Iconic-Font;
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-rendering: auto;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
}

.c12::before {
  content: '\\f2f2';
}

.c7 {
  color: #8D9BA7;
  margin: 0px;
  font-family: Circular,sans-serif;
  font-size: 12px;
  line-height: 1;
  font-weight: 600;
}

.c3 {
  font-weight: 600;
}

.c1 {
  border: 1px solid #DBDFE3;
  margin-bottom: 16px;
  overflow: visible;
  border-radius: 2px;
}

.c10 {
  cursor: pointer;
}

@media screen and (min-width:32em) {
  .c0 {
    width: 50%;
  }
}

@media screen and (min-width:48em) {
  .c6 {
    width: 50%;
  }
}

@media screen and (min-width:48em) {
  .c8 {
    width: 25%;
  }
}

<div
  className="c0 "
>
  <div
    className="c1 c2 "
  >
    <div
      className="c3 c4 "
    >
      <div
        className="c5 "
      >
        <div
          className="c6 "
        >
          <p
            className="c7"
          >
            Name
          </p>
        </div>
        <div
          className="c8 "
        >
          <div
            className="c9 "
          >
            <div>
              <div>
                <div
                  className="button-group-child-item c10 c11 "
                  onClick={[Function]}
                  target={
                    <SortableHeaderCell__TargetContainer
                      align="center"
                    >
                      <P
                        color="grayscale.d"
                        fontStyle="controls.s"
                        m={0}
                      >
                        Company
                      </P>
                      <I
                        color="grayscale.d"
                        iconName="caret-down"
                        ml={2}
                      />
                    </SortableHeaderCell__TargetContainer>
                  }
                >
                  <p
                    className="c7"
                  >
                    Company
                  </p>
                  <i
                    className="c12 "
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Table default 1`] = `
.c1 {
  background-color: #FFF;
}

.c5 {
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
  width: 100%;
}

.c6 {
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
  width: 100%;
}

.c3 {
  font-size: 16px;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 16px;
  padding-bottom: 16px;
  border-bottom-color: #DBDFE3;
  border-bottom-width: 1px;
  border-bottom-style: solid;
}

.c9 {
  font-size: 14px;
  padding: 8px;
}

.c4 {
  margin-left: -8px;
  margin-right: -8px;
  margin-top: -8px;
  margin-bottom: -8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c2 {
  font-weight: 600;
}

.c8 {
  padding: 16px 24px;
  font-weight: 600;
}

.c0 {
  border: 1px solid #DBDFE3;
  margin-bottom: 16px;
  overflow: visible;
  border-radius: 2px;
}

.c7 {
  padding: 24px;
  border-bottom: 1px solid #DBDFE3;
}

.c7:last-of-type {
  border-bottom: none;
}

@media screen and (min-width:48em) {
  .c5 {
    width: 50%;
  }
}

@media screen and (min-width:48em) {
  .c6 {
    width: 25%;
  }
}

<div
  className="c0 c1 "
>
  <div
    className="c2 c3 "
  >
    <div
      className="c4 "
    >
      <div
        className="c5 "
      >
        <div
          className=""
        >
           Header 1 
        </div>
      </div>
      <div
        className="c6 "
      >
        <div
          className=""
        >
           Header 2 
        </div>
      </div>
      <div
        className="c6 "
      >
        <div
          className=""
        >
           Header 3 
        </div>
      </div>
    </div>
  </div>
  <div
    className="c7 "
  >
    <div
      className="c4 "
    >
      <div
        className="c5 "
      >
        <div
          className=""
        >
           1 1 
        </div>
      </div>
      <div
        className="c6 "
      >
        <div
          className=""
        >
           1 2 
        </div>
      </div>
      <div
        className="c6 "
      >
        <div
          className=""
        >
           1 3 
        </div>
      </div>
    </div>
  </div>
  <div
    className="c7 "
  >
    <div
      className="c4 "
    >
      <div
        className="c5 "
      >
        <div
          className=""
        >
           2 1 
        </div>
      </div>
      <div
        className="c6 "
      >
        <div
          className=""
        >
           2 2 
        </div>
      </div>
      <div
        className="c6 "
      >
        <div
          className=""
        >
           2 3 
        </div>
      </div>
    </div>
  </div>
  <div
    className="c8 c9 "
  >
    <div
      className="c4 "
    >
      <div
        className="c5 "
      >
        <div
          className=""
        >
           Footer 1 
        </div>
      </div>
      <div
        className="c6 "
      >
        <div
          className=""
        >
           Footer 2 
        </div>
      </div>
      <div
        className="c6 "
      >
        <div
          className=""
        >
           Footer 3 
        </div>
      </div>
    </div>
  </div>
</div>
`;
